@@ -1,0 +1,1 @@
+debian/libchewing3-data.install
