@@ -1,1 +1,0 @@
-usr/share/libchewing3/chewing
