@@ -1,2 +1,0 @@
-usr/share/libchewing3/chewing/*.dat
-usr/share/libchewing3/chewing/*.tab
