@@ -1,3 +1,0 @@
-usr/lib
-usr/lib/pkgconfig
-usr/include
