@@ -1,4 +1,4 @@
 usr/include
-usr/lib/lib*.a
-usr/lib/lib*.so
-usr/lib/pkgconfig/chewing.pc
+usr/lib/*/lib*.a
+usr/lib/*/lib*.so
+usr/lib/*/pkgconfig/chewing.pc
