@@ -1,7 +1,14 @@
 #!/usr/bin/make -f
 
+DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
+
 override_dh_auto_configure:
-	dh_auto_configure -- --datadir=/usr/share/libchewing3
+	dh_auto_configure -- --datadir=/usr/lib/${DEB_HOST_MULTIARCH}
+
+	echo '/usr/lib/${DEB_HOST_MULTIARCH}/chewing/*.dat' >> \
+			${CURDIR}/debian/libchewing3-data.install
+	echo '/usr/lib/${DEB_HOST_MULTIARCH}/chewing/*.tab' >> \
+			${CURDIR}/debian/libchewing3-data.install
 
 override_dh_auto_clean:
 	[ ! -f test/Makefile ] || (cd test; $(MAKE) distclean)
